--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui</h1> 
-        <li>escola</li>
-        <li>aluno</li>
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">Escola</li>
+            <li class="cabeçalho-lista-item">Estudante</li>
+        </ul>
     </header>
-  
+
 </body>
 </html>
