finalização do projeto

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">Quando foi fundado recebeu o nome de ginásio estadual depois foi alcançado a condição de colégio Estadual e no ano 2000 foi rebatizado de colégio Estadual Paulo Alberto Tomazinho.</p>
+            <p class="escola-texto-dois">Com o meio século de atividades, é referência e faz parte da história do adicional do município de umuarama. Por suas salas de aula passaram e se formaram, várias gerações de estudantes, muitos, hoje, ocupando posições de destaque na comunidade. o colégio CEPPAT, é um local bem arborizado, isso se torna um lugar fresco e agradável para os alunos, com aprendizado excelente. Aqui temos duas quadras de educação física, 23 salas que contam com aproximadamente 830 alunos no período da manhã</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
